# GenesisEngine

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  GameCreation - Shortcut.lnk  GenesisSubstrate_eq.md  PASS10_IMPLEMENTATION_MATRIX.md  PASS12_RESET_IMPLEMENTATION_MATRIX.md  PASS13_RESET_IMPLEMENTATION_MATRIX.md  PASS14_RESET_IMPLEMENTATION_MATRIX.md  PASS15_RESET_IMPLEMENTATION_MATRIX.md  PASS16_RESET_IMPLEMENTATION_MATRIX.md  PASS17_RESET_IMPLEMENTATION_MATRIX.md  PASS18_RESET_IMPLEMENTATION_MATRIX.md  PASS1_IMPLEMENTATION_MATRIX.md  PASS1_SCOUT_AND_CLASSIFICATION.md  PASS20_RESET_IMPLEMENTATION_MATRIX.md  PASS2_IMPLEMENTATION_MATRIX.md  PASS3_IMPLEMENTATION_MATRIX.md  PASS4_IMPLEMENTATION_MATRIX.md  PASS5_IMPLEMENTATION_MATRIX.md  PASS6_IMPLEMENTATION_MATRIX.md  PASS7_IMPLEMENTATION_MATRIX.md  PASS8_IMPLEMENTATION_MATRIX.md  PASS9_IMPLEMENTATION_MATRIX.md  PATCH_POLICY.md  README.md  build_config_log.txt  build_config_log_capture.txt  build_output.txt  chatgptAPI.txt  check.err
ProjectSettings/: notebook_logging.json  project_settings.ewcfg
ResearchConfinement/: OPEN_ME_FIRST.txt  frequency_domain_run_summary.json  gpu_kernel_interference_prediction_surface.json  lattice_projection.ppm  live_compute_interference_ledger.json  packet_frequency_debug.json  photon_audio_waveform_sample.json  photon_lattice_tensor6d_sample.json  photon_packet_path_classification_sample.csv  photon_packet_path_classification_sample.json  photon_packet_trajectory_sample.csv  photon_packet_trajectory_sample.json  photon_shader_texture_sample.json  photon_tensor_gradient_glyph_sample.json  photon_tensor_gradient_sample.json  photon_vector_excitation_sample.json  photon_volume_expansion.gevsd  process_substrate_calculus_encoding_schema.json  reconstructed_packet_paths.json  state.json
build_nocuda/: CTestTestfile.cmake  Makefile
build_test/: CTestTestfile.cmake  Makefile
build_toolsfix/: CTestTestfile.cmake  Makefile
build_toolsfix_dbg/: CTestTestfile.cmake  Makefile
cmake/: EwSpirvTools.cmake
cuda/: GE_canonicalize_kernels.cu  GE_object_local_kernels.cu  GE_phase_current_kernels.cu  carrier_bundle_kernels.cu  emergent_post_kernel.cu  evolve_kernel.cu  field_lattice_kernels.cu  learning_gate_kernels.cu  photon_confinement_kernels.cu  symbol_tokenize_kernels.cu
docs/: CANONICAL_BLUEPRINT_ALIGNMENT.md  CONTEXT_CLASSIFICATION_INDEX.md  GENESIS_AI_SURGICAL_PATCH_PROTOCOL.md  GENESIS_APPLY_TARGET_COMMAND_NOTE.md  GENESIS_COHERENCE_PATCH_LOCATOR.md  GENESIS_COHERENT_PATCH_VIEW.md  GENESIS_HILBERT_ANCHOR_ACTUATION_CONTRACT.md  GENESIS_NODE_GRAPH_NATIVE_NODES.md  GENESIS_ROADMAP_CALCULUS_STOP_NOTE.md  GENESIS_ROADMAP_DEFERRED_CALCULUS_NOTE.md  GENESIS_RUNTIME_EDITOR_SPLIT_NOTE.md  GENESIS_SYNTHCODE_CANONICAL_NOTE.md  GENESIS_WORKSPACE_PROJECTION_NOTE.md  GENESIS_WORKSPACE_PROJECTION_RECEIPT_NOTE.md  actuation_container_packet.md  build_fresh_per_iteration.md  hook_emit_actuation_op_packing.md  substrate_actuation_contract.md
ge_canon/: MERGE_REPORT_2026-03-05.txt
include/: GE_actuation_packet.hpp  GE_ai_anticipation.hpp  GE_ai_config_anchor.hpp  GE_ai_policy.hpp  GE_ai_regression_tests.hpp  GE_ai_vault.hpp  GE_asset_substrate.hpp  GE_audio_features.hpp  GE_audio_wav.hpp  GE_budget_helpers.hpp  GE_camera_anchor.hpp  GE_canonicalize_cuda.hpp  GE_coherence_bus.hpp  GE_coherence_bus_anchor.hpp  GE_coherence_graph_store.hpp  GE_coherence_packets.hpp  GE_collision_env.hpp  GE_collision_env_anchor.hpp  GE_collision_env_packets.hpp  GE_color_palette.hpp  GE_control_packets.hpp  GE_corpus_allowlist.hpp  GE_corpus_anchor_store.hpp  GE_corpus_canonicalizer.hpp  GE_corpus_pulse_log.hpp  GE_curriculum_manager.hpp  GE_domain_policy.hpp  GE_editor_anchor.hpp  GE_experiment_templates.hpp  GE_fft_fixed.hpp  GE_forced_aligner.hpp  GE_frequency_transport.hpp  GE_g2p_english.hpp  GE_g2p_lexicon.hpp  GE_global_coherence.hpp  GE_hilbert_actuation.hpp  GE_language_foundation.hpp  GE_learning_automation.hpp  GE_learning_checkpoint_gate.hpp  GE_live_crawler.hpp  (+81 more)
runtime_cli/: CMakeLists.txt  main.cpp
scripts/: allowed_removed_paths.txt  anchor_pack_list.txt  bootstrap_windows.ps1  build_editor_win64.bat  build_game_win64.bat  build_run42_formal_review.ps1  clean_build_win64.bat  clean_build_win64.ps1  install_vulkan_app_win64.bat  invoke_logged_step.ps1  package_project.py  package_vulkan_app_win64.bat  release_from_base.ps1  run_frequency_domain_research_live.ps1  run_run43_silicon_pulse_equation.ps1  run_silicon_research_live.ps1  update_research_notebook.py  validate_package_win64.bat  verify_release_delta.py
src/: GE_ai_anticipation.cpp  GE_ai_policy.cpp  GE_ai_regression_tests.cpp  GE_ai_vault.cpp  GE_asset_substrate.cpp  GE_audio_features.cpp  GE_audio_wav.cpp  GE_camera_anchor.cpp  GE_canonicalize_cuda.cpp  GE_coherence_bus.cpp  GE_coherence_graph_store.cpp  GE_collision_env.cpp  GE_corpus_allowlist.cpp  GE_corpus_anchor_store.cpp  GE_corpus_canonicalizer.cpp  GE_corpus_pulse_log.cpp  GE_curriculum_manager.cpp  GE_domain_policy.cpp  GE_experiment_templates.cpp  GE_forced_aligner.cpp  GE_fourier_fanout.cpp  GE_g2p_english.cpp  GE_g2p_lexicon.cpp  GE_hilbert_actuation.cpp  GE_lane_threshold_schedule.cpp  GE_language_foundation.cpp  GE_learning_automation.cpp  GE_learning_checkpoint_gate.cpp  GE_live_crawler.cpp  GE_nbody.cpp  (+69 more)
vulkan_app/: CMakeLists.txt  README.md  README_VULKAN_APP.md
vulkan_app/include/: GE_app.hpp  GE_render_instance.hpp  GE_scene_api.hpp  GE_scene_types.hpp  GE_vulkan_types.hpp  ai_ui.hpp  camera_controller.hpp  ew_openai_chat.hpp  obj_import.hpp  openxr_runtime.hpp  ui_theme.hpp  vk_ui_layer.hpp
vulkan_app/resources/: genesis_icon.rc
vulkan_app/shaders/: cam_hist.comp  cam_median.comp  instanced.frag  instanced.vert
vulkan_app/src/: GE_app.cpp  GE_app.hpp  Mesh.cpp  Object.cpp  UITheme.cpp  ai_ui.cpp  ai_ui_stub.cpp  camera_controller.cpp  ew_openai_chat.cpp  main.cpp  obj_import.cpp  ui_stubs.hpp  vk_renderer.cpp  vk_ui_layer.cpp  win64_host.cpp
vulkan_app/src/include/: EwGlyphIcon.hpp  Mesh.hpp  Object.hpp  ObjectStore.hpp  SubstrateManager.hpp  UITheme.hpp
(+374 files in other folders)
